// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image without options 2 images 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test1-350.png\\"
      width=\\"350\\"
      srcset=\\"
        test1-320.png 320w,
        test1-328.png 328w,
        test1-335.png 335w,
        test1-343.png 343w,
        test1-350.png 350w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test1.png\\"
    /><img
      src=\\"test2-400.png\\"
      width=\\"400\\"
      srcset=\\"
        test2-320.png 320w,
        test2-340.png 340w,
        test2-360.png 360w,
        test2-380.png 380w,
        test2-400.png 400w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test2.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      srcset=\\"
        test-320.png   320w,
        test-880.png   880w,
        test-1440.png 1440w,
        test-2000.png 2000w,
        test-2560.png 2560w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-543.png\\"
      width=\\"543\\"
      srcset=\\"
        test-320.png 320w,
        test-376.png 376w,
        test-432.png 432w,
        test-488.png 488w,
        test-543.png 543w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the minWidth 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-200.png\\"
      width=\\"200\\"
      srcset=\\"test-200.png 200w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute superior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      width=\\"789\\"
      srcset=\\"
        test-320.png 320w,
        test-438.png 438w,
        test-555.png 555w,
        test-672.png 672w,
        test-789.png 789w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;
